	PR c/37106 	* c-common.c (parse_optimize_options): Save and restore 	flag_strict_aliasing around decode_options call.

* gcc.dg/pr37106-1.c: New test.
	* gcc.dg/pr37106-2.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@141584 138bc75d-0d04-0410-961f-82ee72b054a4